--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ main{
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 /* top players style */
 .top-players{
@@ -47,7 +48,12 @@ hr{
     margin-left: 16px;
     font-size: 18px;
 }
-/* top blog styles */
+/* ----------------------------------------top blog styles------------------------ */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
 .blog{
     display: flex;
 }
