--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,16 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: 
     #FFFFFF;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 }
 hr{
     border: 1px solid #D1D1D1;
@@ -75,6 +78,29 @@ hr{
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+/* courses styles */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filed{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
 }
