--- a/styles/style.css
+++ b/styles/style.css
@@ -104,3 +104,21 @@ hr{
 .fa-star.empty{
     color: #AEAEAE;
 }
+/* Media Queries */
+
+/* Mobile Devices */
+@media only screen and (max-width:688px){
+    .container{
+        width: 100%;
+    }
+    .players{
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player{
+        flex-direction: column;
+    }
+    .courses{
+        display: none;
+    }
+}
