--- a/styles/style.css
+++ b/styles/style.css
@@ -111,14 +111,23 @@ hr{
     .container{
         width: 100%;
     }
-    .players{
+    .players, .blogs, .courses{
 
         grid-template-columns: repeat(1, 1fr);
     }
-    .player{
+    .player, .blog{
         flex-direction: column;
     }
-    .courses{
-        display: none;
+}
+/* Tablet Devices */
+@media only screen and (min-width: 688px) and (max-width:992px){
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
     }
 }
